--- a/action.yml
+++ b/action.yml
@@ -27,18 +27,23 @@ runs:
         fi
         PROJECT_DATA=$(gh api graphql -f query='  
           query($org: String!, $number: Int!) {
-            organization(login: $org){
+            organization(login: $org) {
               projectV2(number: $number) {
                 id
-                createdAtFieldId: field(name: "Created At") {
-                  id
+                fields(first: 100) {
+                  nodes {
+                    ... on ProjectV2Field {
+                      id
+                      name
+                    }
+                  }
                 }
               }
             }
           }'  -f org=${{ inputs.organization }} -F number=${{ inputs.project-id }})
 
         PROJECT_ID=$(echo $PROJECT_DATA | jq -r '.data.organization.projectV2.id')
-        CREATED_AT_FIELD_ID=$(echo $PROJECT_DATA | jq -r '.data.organization.projectV2.createdAtFieldId.id')
+        CREATED_AT_FIELD_ID=$(echo $PROJECT_DATA | jq -r '.data.organization.projectV2.fields.nodes[] | select(.name == "Created At") | .id')
 
         echo "PROJECT_ID=$PROJECT_ID" >> $GITHUB_ENV
         echo "CREATED_AT_FIELD_ID=$CREATED_AT_FIELD_ID" >> $GITHUB_ENV
@@ -64,36 +69,42 @@ runs:
             nodes {
               ... on PullRequest {
                 id
-                title
                 createdAt
               }
             }
           }
         }
-        " | jq -r '.data.search.nodes[] | {id: .id, title: .title, createdAt: .createdAt}')
-        echo "PR_DATA=$PR_DATA" >> $GITHUB_ENV
+        " | jq -c '.data.search.nodes[]')
+
+        echo "$PR_DATA" > pr_data.json
       shell: bash
     - id: add-prs-to-project
       run: |
-        echo "project id: ${{ env.PROJECT_ID }}"
-        echo "created at field id: ${{ env.CREATED_AT_FIELD_ID }}"
-        for PR_JSON in $(echo ${{ env.PR_DATA }} | jq -c '.[]'); do
-          PR_ID=$(echo $PR_JSON | jq -r '.id')
-          PR_CREATED_AT=$(echo $PR_JSON | jq -r '.createdAt')
-          echo "adding PR: $PR_ID to project: $PROJECT_ID with Created At: $PR_CREATED_AT"
-          gh api graphql -f query='
-          mutation($projectId: ID!, $contentId: ID!, $createdAtFieldId: ID!, $createdAt: DateTime!) {
-            addProjectV2ItemById(input: {projectId: $projectId, contentId: $contentId}) {
-              item {
-                id
+        PR_DATA_FILE=pr_data.json
+        for pr_info in $(cat $PR_DATA_FILE); do
+          PR_ID=$(echo $pr_info | jq -r '.id')
+          PR_CREATED_AT=$(echo $pr_info | jq -r '.createdAt')
+          
+          # Add PR to project
+          ADD_PR_RESULT=$(gh api graphql -f query='
+            mutation($project_id: ID!, $pr_id: ID!) {
+              addProjectV2ItemById(input: {projectId: $project_id, contentId: $pr_id}) {
+                item {
+                  id
+                }
               }
-            }
-            updateProjectV2ItemDateField(input: {id: $createdAtFieldId, projectId: $projectId, value: $createdAt}) {
-              field {
-                id
+            }' -f project_id=$PROJECT_ID -f pr_id=$PR_ID)
+
+          PR_ITEM_ID=$(echo $ADD_PR_RESULT | jq -r '.data.addProjectV2ItemById.item.id')
+          
+          # Set custom Created At field value
+          SET_CREATED_AT_RESULT=$(gh api graphql -f query='
+            mutation($item_id: ID!, $field_id: ID!, $value: Date!, $project_id: ID!) {
+              updateProjectV2ItemFieldValue(input: {itemId: $item_id, fieldId: $field_id, value: {date: $value}, projectId: $project_id}) {
+                clientMutationId
               }
-            }
-          }' -f projectId=$PROJECT_ID -F contentId=$PR_ID -F createdAtFieldId=$CREATED_AT_FIELD_ID -F createdAt=$PR_CREATED_AT
+            }' -f item_id=$PR_ITEM_ID -f field_id=$CREATED_AT_FIELD_ID -f value=$PR_CREATED_AT -f project_id=$PROJECT_ID)
+
         done
       shell: bash
 branding:
