--- a/action.yml
+++ b/action.yml
@@ -62,6 +62,8 @@ runs:
           exit 1
         fi
         USERNAMES_FORMATTED="(${USERNAMES_FORMATTED})"
+        SEARCH_QUERY="org:${{ inputs.organization }} is:pr is:open $USERNAMES_FORMATTED"
+        echo "Search Query: $SEARCH_QUERY"
         PR_DATA=$(gh api graphql --paginate -F query="
         query(\$cursor: String){
           search(first: 100, type: ISSUE, query: \"org:${{ inputs.organization }} is:pr is:open $USERNAMES_FORMATTED\", after: \$cursor) {
